// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProductQuantityPicker stories snapshot > BundleProduct story renders and matches snapshot 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <label
      class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-foreground"
      data-slot="label"
      for="quantity"
    >
      Quantity:
    </label>
    <div
      class="inline-flex items-center border border-input rounded-none"
    >
      <button
        aria-label="Decrement Quantity for Gift Bundle Set"
        class="px-2.5 py-1.5 text-xs text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
        data-testid="quantity-decrement"
        disabled=""
      >
        −
      </button>
      <input
        aria-label="Quantity:"
        class="w-9 text-center text-xs text-foreground border-0 bg-transparent focus:outline-none focus:ring-0 disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
        min="1"
        step="1"
        type="number"
        value="1"
      />
      <button
        aria-label="Increment Quantity for Gift Bundle Set"
        class="px-2.5 py-1.5 text-xs text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
        data-testid="quantity-increment"
      >
        +
      </button>
    </div>
  </div>
</div>
`;

exports[`ProductQuantityPicker stories snapshot > BundleWithLowStock story renders and matches snapshot 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <label
      class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-foreground"
      data-slot="label"
      for="quantity"
    >
      Quantity:
    </label>
    <div
      class="inline-flex items-center border border-input rounded-none"
    >
      <button
        aria-label="Decrement Quantity for Premium Gift Bundle"
        class="px-2.5 py-1.5 text-xs text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
        data-testid="quantity-decrement"
        disabled=""
      >
        −
      </button>
      <input
        aria-label="Quantity:"
        class="w-9 text-center text-xs text-foreground border-0 bg-transparent focus:outline-none focus:ring-0 disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
        min="1"
        step="1"
        type="number"
        value="1"
      />
      <button
        aria-label="Increment Quantity for Premium Gift Bundle"
        class="px-2.5 py-1.5 text-xs text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
        data-testid="quantity-increment"
      >
        +
      </button>
    </div>
  </div>
</div>
`;

exports[`ProductQuantityPicker stories snapshot > CustomStyling story renders and matches snapshot 1`] = `
<div>
  <div
    class="space-y-2 border-2 border-primary rounded-none p-4"
  >
    <label
      class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-foreground"
      data-slot="label"
      for="quantity"
    >
      Quantity:
    </label>
    <div
      class="inline-flex items-center border border-input rounded-none"
    >
      <button
        aria-label="Decrement Quantity for Styled Product"
        class="px-2.5 py-1.5 text-xs text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
        data-testid="quantity-decrement"
        disabled=""
      >
        −
      </button>
      <input
        aria-label="Quantity:"
        class="w-9 text-center text-xs text-foreground border-0 bg-transparent focus:outline-none focus:ring-0 disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
        min="1"
        step="1"
        type="number"
        value="1"
      />
      <button
        aria-label="Increment Quantity for Styled Product"
        class="px-2.5 py-1.5 text-xs text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
        data-testid="quantity-increment"
      >
        +
      </button>
    </div>
  </div>
</div>
`;

exports[`ProductQuantityPicker stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <label
      class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-foreground"
      data-slot="label"
      for="quantity"
    >
      Quantity:
    </label>
    <div
      class="inline-flex items-center border border-input rounded-none"
    >
      <button
        aria-label="Decrement Quantity for Classic T-Shirt"
        class="px-2.5 py-1.5 text-xs text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
        data-testid="quantity-decrement"
        disabled=""
      >
        −
      </button>
      <input
        aria-label="Quantity:"
        class="w-9 text-center text-xs text-foreground border-0 bg-transparent focus:outline-none focus:ring-0 disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
        min="1"
        step="1"
        type="number"
        value="1"
      />
      <button
        aria-label="Increment Quantity for Classic T-Shirt"
        class="px-2.5 py-1.5 text-xs text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
        data-testid="quantity-increment"
      >
        +
      </button>
    </div>
  </div>
</div>
`;

exports[`ProductQuantityPicker stories snapshot > Disabled story renders and matches snapshot 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <label
      class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-foreground"
      data-slot="label"
      for="quantity"
    >
      Quantity:
    </label>
    <div
      class="inline-flex items-center border border-input rounded-none"
    >
      <button
        aria-label="Decrement Quantity for Unavailable Product"
        class="px-2.5 py-1.5 text-xs text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
        data-testid="quantity-decrement"
        disabled=""
      >
        −
      </button>
      <input
        aria-label="Quantity:"
        class="w-9 text-center text-xs text-foreground border-0 bg-transparent focus:outline-none focus:ring-0 disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
        disabled=""
        min="1"
        step="1"
        type="number"
        value="1"
      />
      <button
        aria-label="Increment Quantity for Unavailable Product"
        class="px-2.5 py-1.5 text-xs text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
        data-testid="quantity-increment"
        disabled=""
      >
        +
      </button>
    </div>
  </div>
</div>
`;

exports[`ProductQuantityPicker stories snapshot > HighStock story renders and matches snapshot 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <label
      class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-foreground"
      data-slot="label"
      for="quantity"
    >
      Quantity:
    </label>
    <div
      class="inline-flex items-center border border-input rounded-none"
    >
      <button
        aria-label="Decrement Quantity for Popular Item"
        class="px-2.5 py-1.5 text-xs text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
        data-testid="quantity-decrement"
        disabled=""
      >
        −
      </button>
      <input
        aria-label="Quantity:"
        class="w-9 text-center text-xs text-foreground border-0 bg-transparent focus:outline-none focus:ring-0 disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
        min="1"
        step="1"
        type="number"
        value="1"
      />
      <button
        aria-label="Increment Quantity for Popular Item"
        class="px-2.5 py-1.5 text-xs text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
        data-testid="quantity-increment"
      >
        +
      </button>
    </div>
  </div>
</div>
`;

exports[`ProductQuantityPicker stories snapshot > OutOfStock story renders and matches snapshot 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <label
      class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-foreground"
      data-slot="label"
      for="quantity"
    >
      Quantity:
    </label>
    <div
      class="inline-flex items-center border border-input rounded-none"
    >
      <button
        aria-label="Decrement Quantity for Sold Out Product"
        class="px-2.5 py-1.5 text-xs text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
        data-testid="quantity-decrement"
        disabled=""
      >
        −
      </button>
      <input
        aria-label="Quantity:"
        class="w-9 text-center text-xs text-foreground border-0 bg-transparent focus:outline-none focus:ring-0 disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
        disabled=""
        min="1"
        step="1"
        type="number"
        value="1"
      />
      <button
        aria-label="Increment Quantity for Sold Out Product"
        class="px-2.5 py-1.5 text-xs text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
        data-testid="quantity-increment"
        disabled=""
      >
        +
      </button>
    </div>
    <p
      aria-live="polite"
      class="text-sm leading-none text-left text-destructive font-medium"
      role="alert"
    >
      Out of stock for Sold Out Product
    </p>
  </div>
</div>
`;

exports[`ProductQuantityPicker stories snapshot > WithStockWarning story renders and matches snapshot 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <label
      class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-foreground"
      data-slot="label"
      for="quantity"
    >
      Quantity:
    </label>
    <div
      class="inline-flex items-center border border-input rounded-none"
    >
      <button
        aria-label="Decrement Quantity for Limited Edition Jacket"
        class="px-2.5 py-1.5 text-xs text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
        data-testid="quantity-decrement"
        disabled=""
      >
        −
      </button>
      <input
        aria-label="Quantity:"
        class="w-9 text-center text-xs text-foreground border-0 bg-transparent focus:outline-none focus:ring-0 disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
        min="1"
        step="1"
        type="number"
        value="1"
      />
      <button
        aria-label="Increment Quantity for Limited Edition Jacket"
        class="px-2.5 py-1.5 text-xs text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
        data-testid="quantity-increment"
      >
        +
      </button>
    </div>
  </div>
</div>
`;
